@@ -8,7 +8,7 @@
 use strict;
 my $loaded;
 
-BEGIN { $| = 1; print "1..17\n"; }
+BEGIN { $| = 1; print "1..29\n"; }
 END {print "not ok 1\n" unless $loaded;}
 use Imager qw/:all/;
 $loaded = 1;
@@ -70,6 +70,33 @@ ok($img->polyline(x=>[ 55, 85, 90 ], 'y'=>[60, 65, 95], color=>$green, aa=>1),
 ok($img->polyline(x=>[ 55, 80, 85 ], 'y'=>[65, 70, 95], color=>$green, 
                   antialias=>1),
    "polyline xy with color antialias");
+
+ok($img->setpixel(x=>[35, 37, 39], 'y'=>[55, 57, 59], color=>$red),
+   "set array of pixels");
+ok($img->setpixel(x=>39, 'y'=>55, color=>$green),
+   "set single pixel");
+use Imager::Color::Float;
+my $flred = Imager::Color::Float->new(1, 0, 0, 0);
+my $flgreen = Imager::Color::Float->new(0, 1, 0, 0);
+ok($img->setpixel(x=>[41, 43, 45], 'y'=>[55, 57, 59], color=>$flred),
+   "set array of float pixels");
+ok($img->setpixel(x=>45, 'y'=>55, color=>$flgreen),
+   "set single float pixel");
+my @gp = $img->getpixel(x=>[41, 43, 45], 'y'=>[55, 57, 59]);
+ok(grep($_->isa('Imager::Color'), @gp) == 3, "check getpixel result type");
+ok(grep(color_cmp($_, NC(255, 0, 0)) == 0, @gp) == 3, 
+   "check getpixel result colors");
+my $gp = $img->getpixel(x=>45, 'y'=>55);
+ok($gp->isa('Imager::Color'), "check scalar getpixel type");
+ok(color_cmp($gp, NC(0, 255, 0)) == 0, "check scalar getpixel color");
+@gp = $img->getpixel(x=>[35, 37, 39], 'y'=>[55, 57, 59], type=>'float');
+ok(grep($_->isa('Imager::Color::Float'), @gp) == 3, 
+   "check getpixel float result type");
+ok(grep(color_cmp($_, $flred) == 0, @gp) == 3,
+   "check getpixel float result type");
+$gp = $img->getpixel(x=>39, 'y'=>55, type=>'float');
+ok($gp->isa('Imager::Color::Float'), "check scalar float getpixel type");
+ok(color_cmp($gp, $flgreen) == 0, "check scalar float getpixel color");
 
 ok($img->write(file=>'testout/t21draw.ppm'),
    "saving output");
